--- a/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/objects-right.xhtml
@@ -28,7 +28,7 @@
                     </p:selectOneMenu>
 
                     <p:commandButton value="#{bundle.SaveChange}"
-                                     update="frmFldDefRight:mainGrid"
+                                     update="mainFRM:mainGrid"
                                      actionListener="#{metadatesBean.onSaveChange()}">
                     </p:commandButton>
 
