--- a/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/em_style1.css
@@ -22,11 +22,12 @@
         max-height: 600px;
     } 
 }
-            
+
 body{
     background-color:  antiquewhite;
     font-size: smaller;
     margin: 2px;
+    height: 100%;
 }
 
 .formLayoute{
@@ -185,6 +186,13 @@ body{
     padding-bottom: 2px !important;
     padding-top: 2px !important;
     padding-right: 0px !important;
+}
+
+.col-grid-expl{
+    padding-left: 1.5px !important;
+    padding-bottom: 0.5px !important;
+    padding-top: 0.5px !important;
+    padding-right: 1.5px !important;
 }
 
 .ui-outputlabel-rfi{
