--- a/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/company-explorer.xhtml
@@ -8,11 +8,10 @@
     <ui:param name="_bean" value="#{companyExplBean}"/>
     <ui:param name="_treeBean" value="#{companyBean}" />
     <ui:param name="_detailBean" value="#{departmentBean}" />
-    <ui:param name="_searcheBean" value="#{companyBean}"/>
+    <ui:param name="_searcheBean" value="#{_treeBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('CompanySelector')}"/>
-    <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Companies')}"/>
-    
+    <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Companies')}"/>    
     <ui:param name="_CreateGroupLabel" value="#{bundle.CreateGroup}" />
     <ui:param name="_CreateItemLabel" value="#{bundle.Create}" />            
     
