--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -4,63 +4,35 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ.xhtml">
+                 template="/view/templ/templ-dlg.xhtml">
 
-    <ui:define name="title">
-        #{bundle.View}
+    <ui:param name="_bean" value="#{attacheBean}"/>
+
+    <ui:define name="menuActions" >
     </ui:define>
 
-    <ui:param name="_frm" value="docViewerFRM" />
-    
-    <ui:define name="body">
-        <pe:layout fullPage="true" options="#{attacheBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{attacheBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}"> 
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
-                    
-                    <p:messages id="messages" showDetail="true" closable="true" >
-                        <p:autoUpdate />
-                    </p:messages>
+    <ui:define name="toolbarComponents" >
+    </ui:define>
 
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">                            
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();">  
-                            </p:menuitem>
-                        </p:submenu>
-                    
-                        <f:facet name="options">
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right;"
-                                             title="#{bundle.Close}"
-                                             action="#{attacheBean.onCloseCard()}"> 
-                            </p:commandButton> 
-                        </f:facet>
-                                        
-                    </p:menubar>
-                    
-                    <p:panelGrid columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
-                        <pe:documentViewer value="#{attacheBean.content}" height="750" style="width: 100%;"/>                        
-                    </p:panelGrid>
+    <ui:define name="centerFormContent">   
 
-                    <p:panelGrid columns="1" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="panelLogin">
-                        <p:panel styleClass="ui-grid-col-12">
-                            <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
-                                <p:graphicImage name="/images/escom_logo.jpg"  /> 
-                                <h:panelGroup styleClass="ui-grid-col-12">
-                                    <h4>
-                                        <h:outputLabel value="#{bundle.DocumentPreviewIisNotAvailable}"/> 
-                                    </h4>
-                                </h:panelGroup>
-                            </p:panelGrid>
-                        </p:panel>
-                    </p:panelGrid>
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+        <p:panelGrid columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+            <pe:documentViewer value="#{attacheBean.content}" height="750" style="width: 100%;"/>                        
+        </p:panelGrid>
+
+        <p:panelGrid columns="1" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="panelLogin">
+            <p:panel styleClass="ui-grid-col-12">
+                <p:panelGrid columns="2" columnClasses="ui-grid-col-3, ui-grid-col-12" styleClass="ui-grid-col-12">
+                    <p:graphicImage name="/images/escom_logo.jpg"  /> 
+                    <h:panelGroup styleClass="ui-grid-col-12">
+                        <h4>
+                            <h:outputLabel value="#{bundle.DocumentPreviewIisNotAvailable}"/> 
+                        </h4>
+                    </h:panelGroup>
+                </p:panelGrid>
+            </p:panel>
+        </p:panelGrid>
+
     </ui:define>
 
 </ui:composition>
