--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-explorer.xhtml
@@ -4,9 +4,9 @@
 
     <!-- стандартный обозреватель/селектор для Статусов документов -->
     
-    <ui:param name="_bean" value="#{explorerBean}" />
+    <ui:param name="_bean"        value="#{explorerBean}" />
     <ui:param name="_detailBean"  value="#{statusesDocBean}" />
-    <ui:param name="_searcheBean" value="#{statusesDocBean}"/>
+    <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('DocStatusesSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('DocStatuses')}"/>    
