--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -1,105 +1,73 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 xmlns:pe="http://primefaces.org/ui/extensions"
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html"
-                 template="/view/templ/templ.xhtml">
+                 template="/view/templ/templ-dlg.xhtml">
 
-    <ui:define name="title">
-        #{bundle.Report}
+    <ui:param name="_bean" value="#{docReportBean}"/>
+
+    <ui:define name="menuActions" >
     </ui:define>
 
-    <ui:param name="_frm" value="reportForm" />
-    
-    <ui:define name="body">
-        <pe:layout fullPage="true" options="#{docReportBean.layoutOptions}" widgetVar="fpLayoutWidget">
-            <p:ajax event="resize" listener="#{docReportBean.handleResize}"/> 
-            <pe:layoutPane position="center" resizable="true">
-                <h:form id="#{_frm}" style="font-size: 90%;">                     
-                    <p:hotkey bind="esc" id="hotskey"
-                              immediate="true"                             
-                              onstart="document.getElementById('#{_frm}:btnClose').click();"> 
-                    </p:hotkey>
-                    
-                    <p:messages id="messages" showDetail="true" closable="true" >
-                        <p:autoUpdate />
-                    </p:messages>
-                    
-                    <p:menubar styleClass="without-spaces">
-                        <p:submenu label="#{bundle.Actions}" icon="ui-icon-gear" styleClass="submenu">
-                            <p:menuitem icon="ui-icon-circle-close" value="#{bundle.Close}"
-                                        onclick="document.getElementById('#{_frm}:btnClose').click();"> 
-                            </p:menuitem>
-                        </p:submenu>
-                        <f:facet name="options">
-                            <p:commandButton value="#{bundle.ToForm}" style="padding-top: 2px;"
-                                             actionListener="#{docReportBean.makeReport()}"
-                                             update="#{_frm}">
-                                <f:param name="isRequired" value="true"/>
-                            </p:commandButton>
-                            <p:spacer width="5" />
-                            <p:commandButton id="btnClose" icon="ui-icon-circle-close" style="float:right; padding-top: 2px;"
-                                             title="#{bundle.Close}"
-                                             immediate="true"
-                                             action="#{docReportBean.onCloseCard()}"> 
-                            </p:commandButton> 
-                        </f:facet>
-                    </p:menubar>
-                    
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                        <p:panelGrid columns="3" styleClass="ui-grid-col-12"
-                                     columnClasses="ui-grid-col-3, ui-grid-col-6, ui-grid-col-3" >
-                            <h:panelGroup>
-                                <p:outputLabel value="#{bundle.PeriodSelected}"/>
-                                <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
-                                    #{bundle.With}
-                                    <p:calendar value="#{docReportBean.dateStart}" id="dateStart" styleClass="ui-grid-col-12"
-                                                navigator="true" yearRange="c-120:c+20"
-                                                locale="#{sessionBean.locale}"
-                                                required="#{param['isRequired'] == 'true'}"
-                                                requiredMessage="#{bundle.Field} [#{bundle.DateBegin}: #{bundle.With}] #{bundle.MustBeFilled}">
-                                        <p:ajax event="dateSelect" listener="#{docReportBean.dateStartChange()}"/>
-                                    </p:calendar>
-                                </p:panelGrid>
-                                <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
-                                    #{bundle.At}
-                                    <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" styleClass="ui-grid-col-12"
-                                                navigator="true" yearRange="c-120:c+20"
-                                                locale="#{sessionBean.locale}"
-                                                required="#{param['isRequired'] == 'true'}"
-                                                requiredMessage="#{bundle.Field} [#{bundle.DateEnd}: #{bundle.At}] #{bundle.MustBeFilled}">
-                                        <p:ajax event="dateSelect" listener="#{docReportBean.dateEndChange()}"/>
-                                    </p:calendar>
-                                </p:panelGrid>
-                            </h:panelGroup>
+    <ui:define name="toolbarComponents" >
+        <p:commandButton value="#{bundle.ToForm}" style="padding-top: 2px;"
+                         actionListener="#{docReportBean.makeReport()}"
+                         update="reportForm">
+            <f:param name="isRequired" value="true"/>
+        </p:commandButton>
+    </ui:define>
 
-                            <p:tree value="#{docReportBean.tree}" var="group" 
-                                    selectionMode="checkbox"
-                                    styleClass="ui-grid-col-12 without-spaces"
-                                    selection="#{docReportBean.selectedNodes}">
-                                <p:treeNode type="tree" icon="ui-icon-note">
-                                    <h:outputText value="#{group.name}"/>
-                                </p:treeNode>
-                            </p:tree>
-                            
-                            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
-                                <p:commandButton value="#{bundle.Print}" styleClass="ui-grid-col-12 without-spaces"
-                                                 rendered="#{docReportBean.pieModel != null}"
-                                                 actionListener="#{docReportBean.onPreViewReport()}">
-                                </p:commandButton>
-                            </p:panelGrid>
-                            
-                        </p:panelGrid>    
-
-                        <p:chart type="pie" model="#{docReportBean.pieModel}" 
-                                 rendered="#{docReportBean.pieModel != null}"                                 
-                                 responsive="true" styleClass="ui-grid-col-12"/>
-                        
+    <ui:define name="centerFormContent"> 
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+            <p:panelGrid columns="3" styleClass="ui-grid-col-12"
+                         columnClasses="ui-grid-col-3, ui-grid-col-6, ui-grid-col-3" >
+                <h:panelGroup>
+                    <p:outputLabel value="#{bundle.PeriodSelected}"/>
+                    <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
+                        #{bundle.With}
+                        <p:calendar value="#{docReportBean.dateStart}" id="dateStart" styleClass="ui-grid-col-12"
+                                    navigator="true" yearRange="c-120:c+20"
+                                    locale="#{sessionBean.locale}"
+                                    required="#{param['isRequired'] == 'true'}"
+                                    requiredMessage="#{bundle.Field} [#{bundle.DateBegin}: #{bundle.With}] #{bundle.MustBeFilled}">
+                            <p:ajax event="dateSelect" listener="#{docReportBean.dateStartChange()}"/>
+                        </p:calendar>
                     </p:panelGrid>
+                    <p:panelGrid columns="2" columnClasses="col10r, ui-grid-col-10" styleClass="ui-grid-col-12">
+                        #{bundle.At}
+                        <p:calendar value="#{docReportBean.dateEnd}" id="dateEnd" styleClass="ui-grid-col-12"
+                                    navigator="true" yearRange="c-120:c+20"
+                                    locale="#{sessionBean.locale}"
+                                    required="#{param['isRequired'] == 'true'}"
+                                    requiredMessage="#{bundle.Field} [#{bundle.DateEnd}: #{bundle.At}] #{bundle.MustBeFilled}">
+                            <p:ajax event="dateSelect" listener="#{docReportBean.dateEndChange()}"/>
+                        </p:calendar>
+                    </p:panelGrid>
+                </h:panelGroup>
 
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+                <p:tree value="#{docReportBean.tree}" var="group" 
+                        selectionMode="checkbox"
+                        styleClass="ui-grid-col-12 without-spaces"
+                        selection="#{docReportBean.selectedNodes}">
+                    <p:treeNode type="tree" icon="ui-icon-note">
+                        <h:outputText value="#{group.name}"/>
+                    </p:treeNode>
+                </p:tree>
+
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12">
+                    <p:commandButton value="#{bundle.Print}" styleClass="ui-grid-col-12 without-spaces"
+                                     rendered="#{docReportBean.pieModel != null}"
+                                     actionListener="#{docReportBean.onPreViewReport()}">
+                    </p:commandButton>
+                </p:panelGrid>
+
+            </p:panelGrid>    
+
+            <p:chart type="pie" model="#{docReportBean.pieModel}" 
+                     rendered="#{docReportBean.pieModel != null}"                                 
+                     responsive="true" styleClass="ui-grid-col-12"/>
+
+        </p:panelGrid>
     </ui:define>
 </ui:composition>
