--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-explorer.xhtml
@@ -7,7 +7,7 @@
 
     <ui:param name="_bean" value="#{explorerBean}" />
     <ui:param name="_detailBean"  value="#{partnerTypesBean}"/>
-    <ui:param name="_searcheBean" value="#{partnerTypesBean}"/>
+    <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('PartnerTypeSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('PartnerTypes')}"/>
