--- a/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
@@ -1,14 +1,10 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 template="/view/templ/templ-dlg.xhtml"
-                 xmlns:f="http://xmlns.jcp.org/jsf/core">
+                 xmlns:f="http://xmlns.jcp.org/jsf/core"
+                 template="/view/templ/templ-dlg.xhtml">
 
-    <ui:param name="_bean" value="#{docStatusCardBean}"/>
-    
-    <ui:define name="title">
-        #{bundle.SetDocStatus}
-    </ui:define>s
+    <ui:param name="_bean" value="#{docStatusCardBean}"/>         
     
     <ui:define name="menuActions" >
     </ui:define>
