--- a/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/process-explorer.xhtml
@@ -10,7 +10,7 @@
     <ui:param name="_bean" value="#{explorerTreeBean}" />
     <ui:param name="_treeBean" value="#{processTypesBean}" />
     <ui:param name="_detailBean"  value="#{processBean}"/>
-    <ui:param name="_searcheBean" value="#{processBean}"/>
+    <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('ProcessSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Processes')}"/>
