--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-explorer.xhtml
@@ -4,9 +4,9 @@
 
     <!-- стандартный обозреватель/селектор для Должностей -->   
     
-    <ui:param name="_bean" value="#{explorerBean}" />
+    <ui:param name="_bean"        value="#{explorerBean}" />
     <ui:param name="_detailBean"  value="#{postBean}" />
-    <ui:param name="_searcheBean" value="#{postBean}"/>
+    <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
     <ui:param name="_selectorHeader" value="#{_bean.getLabelFromBundle('PostSelector')}"/>
     <ui:param name="_explorerHeader" value="#{_bean.getLabelFromBundle('Posts')}"/>   
