--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree.xhtml
@@ -44,7 +44,7 @@
                 update="mainFRM:centerFRM #{_updates}"
                 oncomplete="initDND()"/>
 
-        <p:tab id="tabTree" title="#{_lbGroupName}" rendered="#{_treeBean != null}">
+        <p:tab id="tabTree" title="#{_lbGroupName}" rendered="#{_treeBean != null and _bean != null}">
             <ui:include src="/view/templ/tree/tree-toolbar.xhtml"/>
 
             <p:tree id="tree" value="#{_bean.tree}" var="treeItem"  
