--- a/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-explorer.xhtml
@@ -5,10 +5,10 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 template="/view/templ/templ-explorer.xhtml">
         
-    <ui:param name="_bean" value="#{explorerTreeBean}" />
+    <ui:param name="_bean"        value="#{explorerTreeBean}" />
     <ui:param name="_detailBean"  value="#{userBean}"/>
     <ui:param name="_treeBean"    value="#{userGroupsBean}"/>
-    <ui:param name="_searcheBean" value="#{userBean}"/>
+    <ui:param name="_searcheBean" value="#{_detailBean}"/>
     
     <ui:param name="_showAuthor"     value="#{true}"/>
     <ui:param name="_showDateCreate" value="#{false}"/>
