--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -19,7 +19,7 @@
     <p:defaultCommand target="mainFRM:searcheBtn" />
         
     <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-4 col-padding, ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" >
-        <p:panelGrid columns="2" id="abcGrid" layout="grid" columnClasses="ui-grid-col-12 col-padding, ui-grid-col-12 col-padding">
+        <p:panelGrid columns="2" id="abcGrid" layout="grid" columnClasses=" col-padding,  col-padding">
             <p:commandButton value="*" title="#{bundle.StartAnyChars}" styleClass="btABC"
                              actionListener="#{_bean.onAbcSearche}"
                              update="#{_tblUpdate}"
