диалоговые базовые форма крутая переделка

--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -36,7 +36,7 @@
                         <f:facet name="header">
                             <ui:insert name="centerFormHeader"/>
                         </f:facet>
-                        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                            
+                        <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                            
                             <p:toolbar id="explToolBar">
                                 <f:facet name="left">
                                     <ui:insert name="toolbarComponents"/>
