--- a/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/help/help-view.xhtml
@@ -4,7 +4,8 @@
                  template="/view/templ/templ-dlg.xhtml">
   
     <ui:param name="_bean" value="#{helpBean}"/>
-
+    <ui:param name="_isShowHelp" value="#{false}" />
+    
     <ui:define name="menuActions" >
     </ui:define>
 
