--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -322,7 +322,7 @@
     </ui:define>
     
     <ui:define name="dialogs"> 
-        <p:dialog header="#{bundle.About}" modal="true" closeOnEscape="true" resizable="true" maximizable="true" widgetVar="dlgAbout">
+        <p:dialog header="#{bundle.About}" modal="true" closeOnEscape="true" resizable="true" widgetVar="dlgAbout">
             <h:form id="logFRM">                
                 <p:panelGrid id="aboutPanel" columns="2"  columnClasses="ui-grid-col-6 ui-grid-col-6" styleClass="ui-grid-col-12 without-spaces" >
                     <p:panelGrid columns="1"  columnClasses="ui-grid-col-12" styleClass="without-spaces" >
